(style) use covid img and fix spacing

--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,5 +1,6 @@
 .container {
-  margin: 3rem 0;
+  margin: 1rem 0;
+  text-align: center;
 }
 
 .card {
