--- a/src/components/CountryPicker/CountryPicker.module.css
+++ b/src/components/CountryPicker/CountryPicker.module.css
@@ -1,3 +1,4 @@
 .container {
-  margin: 3rem 0;
+  margin: 3rem 0 1rem;
+  max-width: 600px;
 }
